css-chap2-2:css z-index, fixed, absloute

--- a/css-stydy20250519/5-box-model/common.css
+++ b/css-stydy20250519/5-box-model/common.css
@@ -14,5 +14,5 @@ body {
 }
 a {
     color: inherit;
-
+    text-decoration: none;
 }
